# flutter-paddle-ocr

./: CHANGELOG.md  README.md  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
android/src/main/kotlin/com/huyphan/flutter_paddle_ocr/: FlutterPaddleOcrPlugin.kt  PaddleOcrEngine.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/huyphan/flutter_paddle_ocr_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
ios/: flutter_paddle_ocr.podspec
ios/Classes/: FlutterPaddleOcrPlugin.swift
lib/: flutter_paddle_ocr.dart
lib/src/: models.dart
